src/objects/Assigned_Task__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assigned To is used to assign this Task to a User</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assigned_Task</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field is used to enter description about the Task</description>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>This field is used to enter Due date for a Task</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <description>This field is used to enter Task specific &quot;Hourly Rates&quot;</description>
        <inlineHelpText>Task specific Hourly Rates</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>This field is used to define a relationship between Task and Project</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Assigned Tasks</relationshipLabel>
        <relationshipName>Assigned_Task</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This field is used to enter Start date for a Task</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>This field is used to enter the subject of assigned task</description>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Assigned Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TASK-{0000000}</displayFormat>
        <label>Assigned Task #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Task</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>